build/k8s/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promql-agent-deployment
  labels:
    app: promql-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promql-agent
  template:
    metadata:
      labels:
        app: promql-agent
    spec:
      containers:
        - name: promql-agent
          image: joagonzalez/promql-agent:${IMAGE_TAG}
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: promql-agent-service
spec:
  selector:
    app: promql-agent
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
# Traefik Middleware for HTTPS redirect
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# HTTP IngressRoute for redirect
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: promql-agent-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`promql-agent.qwerty.com.ar`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: promQL-agent-service
          port: 80
---
# HTTPS IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: promql-agent-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`promql-agent.qwerty.com.ar`)
      kind: Rule
      services:
        - name: promql-agent-service
          port: 80
      middlewares:
        - name: secure-headers
  tls:
    certResolver: letsencrypt
